[package]
name = "pseudosave"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "dumpsave" ]


[dependencies]
gvas = { git = "https://github.com/localcc/gvas.git", rev = "8b34e03" }
lazy_static = "1.4.0"
native-windows-derive = "1.0.5"
native-windows-gui = "1.0.13"

[build-dependencies]
winres = "0.1.12"
